css/style.css
* {
    font-family: "Maven Pro", sans-serif;
    font-weight: 300;
}

html {
    position: relative;
    min-height: 100%;
}

h1 {
    font-weight: 700;
}

h2 {
    font-weight: 700;
    color: black;
}

p {
    padding-bottom: 10px;
    line-height: 120%;
}

a {
    color: #006380;
}

a:hover {
    color: #ec580f;
}

a:hover, a:visited, a:link, a:active {
    text-decoration: none;
}

.container-fluid {
    padding: 1.5vmin 5vmin;
    background-color: white;
}

.banner-container {
    /** compensate for inherited container margins **/
    margin-top: -5vmax;
    margin-bottom: -10vmax;

    padding: 0;
    padding-top: 5vmax;
}

.banner {
    padding: 0;
}

.section {
    padding-top: 5vmin;
}

.row {
    font-size: 150%;
}

.names {
    margin-top: 2em;
    margin-bottom: 2em;
}

.termin {
    background-color: #006380;
    color: white;
    padding: 10px;
    margin-top: 20px;
    margin-bottom: 40px;
}

.termin a:hover {
    color: #ec580f;
}

.well {
    background-color: #E8F5EC;
    border: none;
    border-radius: 0;
    box-shadow: none;
    overflow: auto;
    height: 300px;
}

a > .well:hover {
    background-color: lightgrey;
}

.new {
    height: 350px;
}

.new h1 {
    color: #ec580f;
}

.icon {
    position: absolute;
    bottom: 50px;
    right: 50px;
}

.team {
    margin-bottom: 30px;
}

.portrait-well {
    margin-top: 10px;
    padding: 10px;
    background-color: #E8F5EC;
    border: none;
    border-radius: 0;
    box-shadow: none;
    overflow: auto;
}

a > .portrait-well:hover {
    background-color: lightgrey;
}

.portrait {
    margin-top: 10px;
    margin-bottom: 10px;
}

.more {
    position: absolute;
    bottom: 60px;
}

.more:focus {
    outline: none;
}

.fa-icon {
    font-size: 10vmin;
}

.footer {
    color: #515151;
}

.footer h2 {
    padding-top: 20px;
}

/** prevent map zooming from messing up page scrolling */
.map iframe {
    pointer-events: none;
}

.no-gutter {
    padding: 0;
}

.fat {
    font-weight: bold;
}

.impressum {
    margin-bottom: 20px;
}

.footer table {
    line-height: 120%;
    margin-bottom: 20px;
}

.tile {
    background: url("../img/tile.jpg");
    background-size: 20vmax;
    height: 10vmax;
    padding: 0;
}

.preliminary {
    color: #ec580f;
}

